--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.ndm</groupId>
-  <artifactId>jai-drone-stuff</artifactId>
+  <artifactId>image-processing-stuff</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>jai-drone-stuff</name>
+  <name>Nates PDIP Image Processing Example</name>
   <url>http://maven.apache.org</url>
 
   <properties>
