--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -27,7 +27,26 @@
 		<artifactId>jai_core</artifactId>
 		<version>1.1.3</version>
 	</dependency>
-  	
+	
+	<dependency>
+		<groupId>com.github.jai-imageio</groupId>
+		<artifactId>jai-imageio-core</artifactId>
+		<version>1.3.1</version>
+	</dependency>
+	
+	
+	<dependency>
+		<groupId>com.beust</groupId>
+		<artifactId>jcommander</artifactId>
+		<version>1.48</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-csv</artifactId>
+		<version>1.2</version>
+	</dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
