--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -62,6 +62,14 @@
 
 	</dependencies>
 
+	<repositories>	
+		<repository>
+            <id>osgeo</id>
+            <name>Open Source Geospatial Foundation Repository</name>
+            <url>http://download.osgeo.org/webdav/geotools/</url>
+        </repository>
+	</repositories>
+
 	<build>
 		<plugins>
 			<plugin>
